# taskflow-ai

./: .coverage  .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
.claude/skills/parallel-subagent-executor/: SKILL.md
.specify/memory/: constitution.md
history/prompts/001-mcp-server-prompts/: 0001-mcp-server-foundation-us1-implementation.red.prompt.md  0001-specifyplus-mcp-server-specification.spec.prompt.md  0002-spec-clarification-session-completed.spec.prompt.md  0003-implementation-plan-created-for-mcp-server.plan.prompt.md  0004-task-breakdown-generated-for-mcp-server.tasks.prompt.md  0005-cross-artifact-analysis-completed.misc.prompt.md  0006-phase-4-6-implementation-implementation.misc.prompt.md  0007-phase-7-sse-transport-implementation.misc.prompt.md
history/prompts/001-todo-console-app/: 0001-implementation-plan-creation.plan.prompt.md  0002-task-breakdown-generation.tasks.prompt.md  0003-complete-phase-3-tests.green.prompt.md  0003-phase2-group-a-implementation.misc.prompt.md  0004-phase1-setup-completion.misc.prompt.md  0004-project-complete.green.prompt.md  0005-unit-tests-task-model.green.prompt.md
history/prompts/constitution/: 0001-taskflow-ai-constitution-v1-0-0-ratification.constitution.prompt.md  0002-constitution-amended-to-v2-0-0.constitution.prompt.md  0003-update-constitution-for-todo-app-phase-1.constitution.prompt.md
history/prompts/general/: 0001-constitution-amendment-committed-to-feature-branch.general.prompt.md
phases/: phase1.md
specifyplus-mcp-server/: .env.example  .gitignore  README.md  pyproject.toml  run-server.sh
specifyplus-mcp-server/specifyplus-mcp-server/tests/fixtures/edge_cases/: large_file.md  no_arguments.md  no_frontmatter.md
specifyplus-mcp-server/specifyplus-mcp-server/tests/fixtures/malformed/: invalid_yaml.md
specifyplus-mcp-server/specifyplus-mcp-server/tests/fixtures/valid/: sp.test.md
specifyplus-mcp-server/src/: __init__.py  exceptions.py  handler.py  loader.py  models.py  registry.py  server.py  validators.py  watcher.py
specifyplus-mcp-server/tests/: __init__.py  test_exceptions.py  test_handler.py  test_integration.py  test_loader.py  test_models.py  test_registry.py  test_server.py  test_validators.py  test_watcher.py
specifyplus-mcp-server/tests/fixtures/edge_cases/: empty_description.md  no_arguments.md  no_frontmatter.md  special_characters.md
specifyplus-mcp-server/tests/fixtures/malformed/: invalid_handoff.md  invalid_yaml.md  missing_description.md
specifyplus-mcp-server/tests/fixtures/valid/: sp.simple.md  sp.test.md
specs/001-mcp-server-prompts/: plan.md  spec.md  tasks.md
specs/001-mcp-server-prompts/checklists/: requirements.md
specs/001-todo-console-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/todo/: __init__.py
src/todo/cli/: __init__.py  commands.py  (+1 more)
tests/: __init__.py
tests/integration/: __init__.py  test_cli_workflow.py
tests/unit/: __init__.py
(+11 files in other folders)
